--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.0",
     "dotenv": "^16.3.1",
     "next": "^14.2.3",
+    "next-auth": "^5.0.0-beta.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.51.4",
