--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.51.4",
     "react-icons": "^5.0.0",
     "react-resizable-panels": "^2.0.19",
+    "react-spinners": "^0.13.8",
     "resend": "^3.2.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
