--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
     "dotenv": "^16.3.1",
     "lucide-react": "^0.390.0",
     "next": "^14.2.3",
@@ -34,7 +33,6 @@
     "react-resizable-panels": "^2.0.19",
     "react-spinners": "^0.13.8",
     "resend": "^3.2.0",
-    "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
@@ -47,11 +45,14 @@
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.0.1",
+    "clsx": "^2.1.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "framer-motion": "^11.2.10",
     "postcss": "^8",
     "prisma": "^5.13.0",
-    "tailwindcss": "^3.3.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5"
   }
 }
